syntax = "proto3";

package protos;
option go_package = "github.com/seoyhaein/tori/protos";

import "google/protobuf/empty.proto";

message StoreFoldersInfoRequest {
  // 클라이언트에서 작업 실행 여부를 전달.
  bool confirm = 1;
}

// StoreFoldersInfo 메서드
// 응답 메시지 정의 (성공 여부와 에러 메시지를 담음)
// success 같은 경우, StoreFoldersInfo 에는 리턴이 없는, 다른 언어로 작성된 클라이언트에서 안전하게 표현해주기 위해서 넣었음.
message StoreFoldersInfoResponse {
  bool success = 1;
  string error = 2;
}

// 폴더 정보 저장 서비스를 정의합니다.
service DBApisService {
  // 아무 입력 값 없이 서버 내부의 폴더 정보를 DB에 저장
  rpc StoreFoldersInfo(StoreFoldersInfoRequest) returns (StoreFoldersInfoResponse);
}